--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,10 @@
   url: /about/
 - title: Samples
   url: /samples/
+- title: Projects
+  url: /projects/
 - title: Blog
   url: /blog/
 - title: Archive
   url: /archive/
+ 
