--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
   url: /main/
 - title: About
   url: /about/
-- title: Samples
-  url: /samples/
+- title: Portfolio Samples
+  url: /portfolio/
 - title: Blog
   url: /blog/
 - title: Archive
