--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   url: /main/
 - title: About
   url: /about/
-- title: Portfolio Samples
+- title: Portfolio
   url: /portfolio/
 - title: Blog
   url: /blog/
