--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: mmistakes/so-simple-theme
 locale: "en-GB"
 title: Lottie Clarke
 description: Lottie Clarke's writing portfolio
-logo: /images/AVATAR.png
+logo: /images/IMG_20170914_100039.jpg
 url: https://breezytealy.github.io
 read_time: true
 words_per_minute: 200
