--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 remote_theme: breezytealy/so-simple-theme
 locale: "en-GB"
 title: Lottie Clarke
-description: \"Fictional Scientist\" 
+description: (Fictional) Science Writer 
 logo: /images/IMG_20170914_100039.jpg
 url: https://breezytealy.github.io
 read_time: true
